--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    overflow-x: hidden; /* Evita rolagem horizontal */
+    overflow-x: hidden;
 }
 
 .container {
@@ -18,11 +18,6 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 100%; /* Assegura que a largura da container não ultrapasse a tela */
-    overflow-y: auto; /* Permite rolagem vertical */
-}
-.lista{
-    text-align: left;
 }
 
 h1 {
@@ -45,8 +40,8 @@ button {
     border-radius: 4px;
     cursor: pointer;
 }
-button:hover{
-    background-color: #dcbcd5; /* Green */
+button:hover {
+    background-color: #dcbcd5;
     color: black;
 }
 
@@ -58,45 +53,15 @@ button:disabled {
 #resultados {
     margin-top: 20px;
     text-align: left;
-    max-height: 200px; /* Limita a altura dos resultados com rolagem vertical */
+    max-height: 200px;
     overflow-y: auto;
-    white-space: nowrap; /* Impede a quebra de linha */
 }
 
 .jogo {
     margin-bottom: 10px;
-}
-
-.jogo-label {
-    font-weight: bold;
-    display: inline-block;
-    width: 100px; /* Garante que o label ocupe uma largura fixa */
-}
-
-.adicionado {
-    color: red;
-    font-weight: bold;
+    font-size: 16px;
 }
 
 .export-buttons {
     margin-top: 20px;
-}
-
-@media (max-width: 600px) {
-    body {
-        padding: 10px;
-    }
-
-    .container {
-        padding: 15px;
-    }
-
-    button {
-        padding: 8px 15px;
-        font-size: 14px;
-    }
-
-    .jogo-label {
-        width: auto;
-    }
 }
